Fixed spacing in files and layout of bookmarks container.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,7 +22,6 @@
 .home-container {
   width: 100%;
   display: flex;
-  margin: auto;
 }
 
 /* .restaurants-container {
